Поддержал изменения на Юзере для получения ссылок